<resources>
    <string name="app_name">LitGid</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="comfirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save_login_app">Save login in app</string>
    <string name="save_password_app">Save password in app</string>
    <string name="lang_pref">Language preferences</string>
    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string-array name="langEntry">
        <item>Russian</item>
        <item>English</item>
    </string-array>
    <string name="preferences">Preferences</string>
    <string name="category">List of categories</string>
    <string name="user_list">List of users</string>
    <string name="categoryName">Category name</string>
    <string name="add">Add</string>
    <string name="writing_list">List of writings</string>
    <string name="addWriting">Add writing</string>
    <string name="writingName">Writings name</string>
    <string name="writingText">Content of writing</string>
    <string name="save">Save</string>
    <string name="add_comment">Add comment</string>
    <string name="restartApplication">Restarting application to change language?</string>
</resources>